--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "chai": "^4.3.4",
     "cucumber-html-reporter": "^5.4.0",
     "protractor-cucumber-framework": "^8.0.4",
-    "protractor-element-extend": "^2.4.1"
+    "protractor-element-extend": "^2.4.1",
+    "selenium-webdriver": "^3.6.0"
   },
   "dependencies": {
     "chai-as-promised": "^7.1.1",
